Reset:Starfive-jh7110: Add reset driver for JH7110
Support for reset controller on starfive JH7110 SoCs.

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/drivers/reset/Kconfig
+++ b/drivers/reset/Kconfig
@@ -164,6 +164,14 @@ config RESET_IPQ419
 	  Support for reset controller on Qualcomm
 	  IPQ40xx SoCs.
 
+config RESET_JH7110
+	bool "Reset driver for Starfive JH7110 SoC"
+	depends on DM_RESET && TARGET_STARFIVE_VISIONFIVE
+	default y
+	help
+	  Support for reset controller on Starfive
+	  JH7110 SoCs.
+
 config RESET_SIFIVE
 	bool "Reset Driver for SiFive SoC's"
 	depends on DM_RESET && CLK_SIFIVE_PRCI && (TARGET_SIFIVE_UNLEASHED || TARGET_SIFIVE_UNMATCHED)
