GPIO:Starfive-jh7110: Add GPIO driver for JH7110
Support for GPIO controller on starfive JH7110 SoCs.

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -382,6 +382,12 @@ config SIFIVE_GPIO
 	  Device model driver for GPIO controller present in SiFive FU540 SoC. This
 	  driver enables GPIO interface on HiFive Unleashed A00 board.
 
+config STARFIVE_GPIO
+	bool "StarFive GPIO driver"
+	depends on DM_GPIO
+	help
+	  Device model driver for GPIO controller present in StarFive JH7110 SoC.
+
 config MVEBU_GPIO
 	bool "Marvell MVEBU GPIO driver"
 	depends on DM_GPIO && (ARCH_MVEBU || ARCH_KIRKWOOD)
