--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -220,6 +220,13 @@ config DWC_ETH_QOS_TEGRA186
 	  The Synopsys Designware Ethernet QOS IP block with specific
 	  configuration used in NVIDIA's Tegra186 chip.
 
+config DWC_ETH_QOS_STARFIVE
+	bool "Synopsys DWC Ethernet QOS device support for STARFIVE"
+	depends on DWC_ETH_QOS
+	help
+	  The Synopsys Designware Ethernet QOS IP block with the specific
+	  configuration used in STARFIVE soc.
+
 config E1000
 	bool "Intel PRO/1000 Gigabit Ethernet support"
 	help
