riscv:dts: update clk&reset properties
Synchronize the kernel dts file

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/arch/riscv/dts/starfive_visionfive.dts
+++ b/arch/riscv/dts/starfive_visionfive.dts
@@ -76,14 +76,18 @@
 	status = "disabled";
 };
 
+&usbdrd30 {
+	status = "okay";
+};
 
+&usbdrd_cdns3 {
+	dr_mode = "host";
+};
 
+&timer {
+	status = "disabled";
+};
 
-
-
-
-
-
-
-
-
+&wdog {
+	status = "disabled";
+};
