usb:cdns3:Add StarFive wrapper driver for CDNS USB3 controller
Add driver to handle StarFive  specific wrapper for Cadence USB3 controller
present on JH7110  SoC.

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/drivers/usb/cdns3/Makefile
+++ b/drivers/usb/cdns3/Makefile
@@ -9,3 +9,4 @@ cdns3-$(CONFIG_$(SPL_)USB_CDNS3_GADGET)	+= gadget.o ep0.o
 cdns3-$(CONFIG_$(SPL_)USB_CDNS3_HOST)	+= host.o
 
 obj-$(CONFIG_USB_CDNS3_TI)		+= cdns3-ti.o
+obj-$(CONFIG_USB_CDNS3_STARFIVE)	+= cdns3-starfive.o
