--- a/drivers/usb/cdns3/Kconfig
+++ b/drivers/usb/cdns3/Kconfig
@@ -55,4 +55,12 @@ config USB_CDNS3_TI
 	help
 	  Say 'Y' here if you are building for Texas Instruments
 	  platforms that contain Cadence USB3 controller core. E.g.: J721e.
+
+config USB_CDNS3_STARFIVE
+	tristate "Cadence USB3 support on StarFive SoC"
+	depends on USB_CDNS3
+	help
+	  Say 'Y' here if you are building for StarFive SoCs
+	  that contain Cadence USB3 controller core. E.g.: JH7110.
+
 endif
