reset:starfive-jh7110: Adjust the dependency of RESET_JH7110 macro
Adjust the dependency from TARGET_STARFIVE_VISIONFIVE to
STARFIVE_JH7110.

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/drivers/reset/Kconfig
+++ b/drivers/reset/Kconfig
@@ -166,7 +166,7 @@ config RESET_IPQ419
 
 config RESET_JH7110
 	bool "Reset driver for Starfive JH7110 SoC"
-	depends on DM_RESET && TARGET_STARFIVE_VISIONFIVE
+	depends on DM_RESET && STARFIVE_JH7110
 	default y
 	help
 	  Support for reset controller on Starfive
