config:starfive-jh7110: update starfive evb board default config
Add DDR config to the default config for starfive evb board.

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/configs/starfive_evb_defconfig
+++ b/configs/starfive_evb_defconfig
@@ -10,6 +10,7 @@ CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_BUILD_TARGET=""
 CONFIG_TARGET_STARFIVE_EVB=y
 CONFIG_NR_CPUS=5
+CONFIG_FPGA_GMAC_SPEED_AUTO=y
 CONFIG_ARCH_RV64I=y
 CONFIG_CMODEL_MEDANY=y
 CONFIG_RISCV_SMODE=y
@@ -59,9 +60,14 @@ CONFIG_SF_DEFAULT_SPEED=50000000
 CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_PHY_MARVELL=y
+CONFIG_PHY_YUTAI=y
 CONFIG_DWC_ETH_QOS=y
 CONFIG_DWC_ETH_QOS_STARFIVE=y
 CONFIG_RGMII=y
+CONFIG_RAM=y
+CONFIG_SPL_RAM=y
+# CONFIG_RAM_SIFIVE is not set
+CONFIG_SPL_STARFIVE_DDR=y
 CONFIG_DM_RESET=y
 CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_SYS_NS16550=y
@@ -73,3 +79,5 @@ CONFIG_USB_CDNS3=y
 CONFIG_USB_CDNS3_HOST=y
 CONFIG_USB_STORAGE=y
 CONFIG_OF_LIBFDT_OVERLAY=y
+# CONFIG_EFI_UNICODE_COLLATION_PROTOCOL2 is not set
+# CONFIG_EFI_LOAD_FILE2_INITRD is not set
