config:starfive-jh7110: add MICREL phy config to defconfig
Add MICREL phy config to defconfig for starfive EVB board.

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/configs/starfive_evb_defconfig
+++ b/configs/starfive_evb_defconfig
@@ -60,6 +60,9 @@ CONFIG_SF_DEFAULT_SPEED=50000000
 CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_PHY_MARVELL=y
+CONFIG_PHY_MICREL=y
+CONFIG_PHY_MICREL_KSZ90X1=y
+# CONFIG_PHY_MSCC is not set
 CONFIG_PHY_YUTAI=y
 CONFIG_DWC_ETH_QOS=y
 CONFIG_DWC_ETH_QOS_STARFIVE=y
