--- a/arch/riscv/dts/starfive_evb.dts
+++ b/arch/riscv/dts/starfive_evb.dts
@@ -17,8 +17,8 @@
 		gpio0="/soc/gpio@13040000";
 		ethernet0=&gmac0;
 		ethernet1=&gmac1;
-		mmc0="/soc/sdio0@16010000";
-		mmc1="/soc/sdio1@16020000";
+		mmc0=&sdio0;
+		mmc1=&sdio1;
 	};
 
 	chosen {
@@ -47,17 +47,13 @@
 };
 
 &sdio0 {
-	clock-frequency = <4000000>;
-	max-frequency = <1000000>;
-	bus-width = <8>;
+	fifo-depth = <32>;
+	bus-width = <4>;
 	status = "okay";
 };
 
 &sdio1 {
-	clock-frequency = <4000000>;
-	max-frequency = <1000000>;
-	bus-width = <4>;
-	status = "okay";
+	status = "disabled";
 };
 
 &gmac0 {
