--- a/configs/starfive_evb_defconfig
+++ b/configs/starfive_evb_defconfig
@@ -80,6 +80,7 @@ CONFIG_USB=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_CDNS3=y
 CONFIG_USB_CDNS3_HOST=y
+CONFIG_USB_CDNS3_STARFIVE=y
 CONFIG_USB_STORAGE=y
 CONFIG_OF_LIBFDT_OVERLAY=y
 # CONFIG_EFI_UNICODE_COLLATION_PROTOCOL2 is not set
