--- a/configs/starfive_jh7100_visionfive_smode_defconfig
+++ b/configs/starfive_jh7100_visionfive_smode_defconfig
@@ -7,7 +7,7 @@ CONFIG_SYS_MEMTEST_END=0x200000000
 CONFIG_ENV_SIZE=0x1f000
 CONFIG_ENV_SECT_SIZE=0x1000
 # CONFIG_DM_GPIO is not set
-CONFIG_DEFAULT_DEVICE_TREE="jh7100-visionfive"
+CONFIG_DEFAULT_DEVICE_TREE="jh7100-starfive-visionfive-v1"
 CONFIG_IDENT_STRING="StarFive"
 CONFIG_SYS_CLK_FREQ=1000000000
 CONFIG_TARGET_STARFIVE_JH7100=y
