net: phy: Support YT8531 Gigabit Ethernet
Signed-off-by: Jianlong Huang <jianlong.huang@starfivetech.com>

--- a/configs/starfive_evb_defconfig
+++ b/configs/starfive_evb_defconfig
@@ -73,6 +73,7 @@ CONFIG_PHY_MICREL=y
 CONFIG_PHY_MICREL_KSZ90X1=y
 # CONFIG_PHY_MSCC is not set
 CONFIG_PHY_YUTAI=y
+CONFIG_DM_ETH_PHY=y
 CONFIG_DWC_ETH_QOS=y
 CONFIG_DWC_ETH_QOS_STARFIVE=y
 CONFIG_RGMII=y
