riscv:dts:starfive-jh7110: modify Model and riscv,isa info
Change Model to "StarFive JH7110 EVB", and change riscv,isa to
"rv64imafdcbsux"

Signed-off-by: yanhong.wang <yanhong.wang@starfivetech.com>

--- a/arch/riscv/dts/jh7110.dtsi
+++ b/arch/riscv/dts/jh7110.dtsi
@@ -36,7 +36,7 @@
 			i-tlb-size = <40>;
 			mmu-type = "riscv,sv39";
 			next-level-cache = <&cachectrl>;
-			riscv,isa = "rv64imac";
+			riscv,isa = "rv64imacu";
 			tlb-split;
 			status = "disabled";
 
@@ -63,7 +63,7 @@
 			i-tlb-size = <40>;
 			mmu-type = "riscv,sv39";
 			next-level-cache = <&cachectrl>;
-			riscv,isa = "rv64imafdc";
+			riscv,isa = "rv64imafdcbsux";
 			tlb-split;
 			status = "okay";
 
@@ -90,7 +90,7 @@
 			i-tlb-size = <40>;
 			mmu-type = "riscv,sv39";
 			next-level-cache = <&cachectrl>;
-			riscv,isa = "rv64imafdc";
+			riscv,isa = "rv64imafdcbsux";
 			tlb-split;
 			status = "okay";
 
@@ -117,7 +117,7 @@
 			i-tlb-size = <40>;
 			mmu-type = "riscv,sv39";
 			next-level-cache = <&cachectrl>;
-			riscv,isa = "rv64imafdc";
+			riscv,isa = "rv64imafdcbsux";
 			tlb-split;
 			status = "okay";
 
@@ -144,7 +144,7 @@
 			i-tlb-size = <40>;
 			mmu-type = "riscv,sv39";
 			next-level-cache = <&cachectrl>;
-			riscv,isa = "rv64imafdc";
+			riscv,isa = "rv64imafdcbsux";
 			tlb-split;
 			status = "okay";
 
