--- a/arch/riscv/dts/starfive_visionfive2.dts
+++ b/arch/riscv/dts/starfive_visionfive2.dts
@@ -15,9 +15,10 @@
 	aliases {
 		spi0="/soc/spi@13010000";
 		gpio0="/soc/gpio@13040000";
-		ethernet0="/soc/ethernet@16030000";
-		mmc0="/soc/sdio0@16010000";
-		mmc1="/soc/sdio1@16020000";
+		ethernet0=&gmac0;
+		ethernet1=&gmac1;
+		mmc0=&sdio0;
+		mmc1=&sdio1;
 	};
 
 	chosen {
@@ -46,22 +47,28 @@
 };
 
 &sdio0 {
-	clock-frequency = <4000000>;
-	max-frequency = <1000000>;
-	bus-width = <8>;
-	status = "okay";
-};
-
-&sdio1 {
-	clock-frequency = <4000000>;
-	max-frequency = <1000000>;
+	fifo-depth = <32>;
 	bus-width = <4>;
 	status = "okay";
 };
 
+&sdio1 {
+	status = "disabled";
+};
+
 &gmac0 {
-	phy-reset-gpios = <&gpio 63 0>;
 	status = "okay";
+};
+
+&gmac1 {
+	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
+	phy0: ethernet-phy@0 {
+		rxc-skew-ps = <1060>;
+		txc-skew-ps = <1800>;
+		reg = <0>;
+	};
 };
 
 &gpio {
