--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -77,7 +77,7 @@ config SIFIVE_OTP
 
 config STARFIVE_OTP
         bool "StarFive eFuse OTP driver"
-        depends on MISC
+        depends on MISC && !ID_EEPROM
         help
           Enable support for reading and writing the eFuse OTP on the
           StarFive SoCs.
