--- a/configs/starfive_evb_defconfig
+++ b/configs/starfive_evb_defconfig
@@ -1,6 +1,8 @@
 CONFIG_RISCV=y
 CONFIG_SYS_MALLOC_F_LEN=0x8000
 CONFIG_NR_DRAM_BANKS=1
+CONFIG_ENV_SIZE=0x10000
+CONFIG_ENV_OFFSET=0xF0000
 CONFIG_SPL_DM_SPI=y
 CONFIG_DEFAULT_DEVICE_TREE="starfive_evb"
 CONFIG_SPL_MMC_SUPPORT=y
@@ -39,6 +41,7 @@ CONFIG_SPL_SPI_LOAD=y
 CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="StarFive # "
 CONFIG_CMD_CONFIG=y
+CONFIG_CMD_ERASEENV=y
 CONFIG_CMD_GPT_RENAME=y
 CONFIG_CMD_MISC=y
 CONFIG_CMD_PART=y
@@ -49,6 +52,8 @@ CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_FS_UUID=y
 CONFIG_CMD_LOG=y
 CONFIG_OF_EMBED=y
+CONFIG_ENV_OVERWRITE=y
+CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_VERSION_VARIABLE=y
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_SPL_CLK_COMPOSITE_CCF=y
