dts: pmic: add axp15060 pmic config in vf2 uboot dts
add axp15060 pmic dts config for opensbi power managment
used.

Signed-off-by: minda.chen <minda.chen@starfivetech.com>

--- a/arch/riscv/dts/starfive_visionfive2.dts
+++ b/arch/riscv/dts/starfive_visionfive2.dts
@@ -111,6 +111,11 @@
 		reg = <0x50>;
 		pagesize = <16>;
 	};
+
+	pmic: axp15060_reg@36 {
+               compatible = "stf,axp15060-regulator";
+               reg = <0x36>;
+	};
 };
 
 &gpioa {
