--- a/arch/riscv/dts/starfive_evb.dts
+++ b/arch/riscv/dts/starfive_evb.dts
@@ -58,13 +58,23 @@
 
 &gmac0 {
 	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
+	phy0: ethernet-phy@0 {
+		rxc_dly_en = <1>;
+		tx_delay_sel_fe = <5>;
+		tx_delay_sel = <0xb>;
+		tx_inverted_10 = <0x0>;
+		tx_inverted_100 = <0x0>;
+		tx_inverted_1000 = <0x0>;
+	};
 };
 
 &gmac1 {
 	status = "okay";
 	#address-cells = <1>;
 	#size-cells = <0>;
-	phy0: ethernet-phy@0 {
+	phy1: ethernet-phy@1 {
 		rxc-skew-ps = <1060>;
 		txc-skew-ps = <1800>;
 		reg = <0>;
