dts: add i2c5 and attach pmic configuration
i2c5 and pmic is used by opensbi power management
ops.

Signed-off-by: minda.chen <minda.chen@starfivetech.com>

--- a/arch/riscv/dts/starfive_evb.dts
+++ b/arch/riscv/dts/starfive_evb.dts
@@ -171,3 +171,10 @@
 &pdm {
 	status = "disabled";
 };
+
+&i2c5 {
+	pmic_axp15060: axp15060_reg@36 {
+               compatible = "stf,axp15060-regulator";
+               reg = <0x36>;
+	};
+};
