board:starfive:evb: Support using env to detect board version
JH7110B need tx_inverted by YT8521 phy, you need to read the chip
version to determine whether to use it.

Signed-off-by: Samin Guo <samin.guo@starfivetech.com>

--- a/configs/starfive_evb_defconfig
+++ b/configs/starfive_evb_defconfig
@@ -27,6 +27,8 @@ CONFIG_USE_BOOTARGS=y
 CONFIG_BOOTARGS="console=ttyS0,115200  debug rootwait  earlycon=sbi "
 CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTCOMMAND="fatload mmc 0:3 $kernel_addr_r jh7110_uEnv.txt; env import -t $kernel_addr_r $filesize;run boot2"
+CONFIG_USE_PREBOOT=y
+CONFIG_PREBOOT="run chipa_set_uboot"
 CONFIG_LOG_MAX_LEVEL=4
 CONFIG_SPL_LOG=y
 CONFIG_DISPLAY_CPUINFO=y
