--- a/configs/starfive_visionfive2_defconfig
+++ b/configs/starfive_visionfive2_defconfig
@@ -49,6 +49,7 @@ CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="StarFive # "
 CONFIG_CMD_CONFIG=y
 CONFIG_CMD_ERASEENV=y
+CONFIG_CMD_NVEDIT_EFI=y
 CONFIG_CMD_EEPROM=y
 CONFIG_SYS_EEPROM_SIZE=512
 CONFIG_SYS_EEPROM_PAGE_WRITE_BITS=4
@@ -58,6 +59,7 @@ CONFIG_CMD_I2C=y
 CONFIG_CMD_MISC=y
 CONFIG_CMD_PART=y
 CONFIG_CMD_TFTPPUT=y
+CONFIG_CMD_EFIDEBUG=y
 CONFIG_CMD_SYSBOOT=y
 CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_FS_UUID=y
