board:starfive:visionfive2: configure vf2 for sysboot method
Dynamically edit dtb to load correct hardware information and uses sysboot method to boot to distro

Signed-off-by: Clement <clement@starfivetech.com>

--- a/configs/starfive_visionfive2_defconfig
+++ b/configs/starfive_visionfive2_defconfig
@@ -27,7 +27,7 @@ CONFIG_SPI_BOOT=y
 CONFIG_USE_BOOTARGS=y
 CONFIG_BOOTARGS="console=ttyS0,115200  debug rootwait  earlycon=sbi"
 CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="run load_vf2_env;run importbootenv;run boot2;run distro_bootcmd"
+CONFIG_BOOTCOMMAND="run load_vf2_env;run importbootenv;run load_distro_uenv;run boot2;run distro_bootcmd"
 CONFIG_USE_PREBOOT=y
 CONFIG_PREBOOT="run chipa_set_uboot;run mmcbootenv"
 CONFIG_DEFAULT_FDT_FILE="starfive/starfive_visionfive2.dtb"
