exclude opensbi memory range in device tree
This patch explicitly excludes the memory range of the OpenSBI in the
built-in device tree. When booting EFI, the efi loader has to know
about that zone before loading the device tree for Linux, otherwise
it tries to access 0x40000000, leading to an access violation.

Signed-off-by: Felix Moessbauer <felix.moessbauer@siemens.com>

--- a/arch/riscv/dts/starfive_evb.dts
+++ b/arch/riscv/dts/starfive_evb.dts
@@ -27,10 +27,20 @@
 			starfive,boot-hart-id = <1>;
 	};
 
-
 	memory@80000000 {
 		device_type = "memory";
 		reg = <0x0 0x40000000 0x1 0x0>;
+	};
+
+	reserved-memory {
+			#size-cells = <2>;
+			#address-cells = <2>;
+			ranges;
+
+			opensbi {
+				reg = <0x00 0x40000000 0x00 0x80000>;
+				no-map;
+			};
 	};
 
 	soc {
