reset: add reset sbi config.
add vf2 sbi reset. uboot command "reset" and
"reset -w" can work.

Signed-off-by: minda.chen <minda.chen@starfivetech.com>

--- a/configs/starfive_visionfive2_defconfig
+++ b/configs/starfive_visionfive2_defconfig
@@ -106,6 +106,8 @@ CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_SYS_NS16550=y
 CONFIG_SPI=y
 CONFIG_CADENCE_QSPI=y
+CONFIG_SYSRESET=y
+CONFIG_SYSRESET_SBI=y
 CONFIG_USB=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_CDNS3=y
